--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 --color-rosado-50: hsl(12, 20%, 44%) ;
 --color-rosado-90: hsl(14, 65%, 9%) ;
 
---font-family: 'Inter', sans-serif;
+--font-family: "Red Hat Text", sans-serif;
 
 --text-main: 16px;
 --font-weight-cuatro: 400;
